Nov 10, 2005

  * TS: Two more bug fixes for constraints without
	active occurrences that trigger.

Nov 4, 2005

  * TS: Small optimization of code for constraints
	without any active occurrence.
  * TS: Fixed bug caused by previous bug fix:
        added only_ground_indexed_arguments/1 test
	to separate out that meaning from may_trigger/1.

Nov 3, 2005

  * TS: Removed strip_attributes code.
  * TS: Fixed bug that causes new constraints to be added on triggering.

Oct 25, 2005

  * TS: Two minor bug fixes.

Oct 19, 2005

  * TS: Fixed bug due to overly aggressive inlining of get_mutable_value.

Oct 18, 2005

  * JS: Compiled code is broken, if debug is off and optimize too.
	Debug off now entails optimize on.

  * TS: Some fixes of the documentation. Thanks to Bart Demoen
	and Thom Fruehwirth. 

Sep 2, 2005

  * TS: Synchronized with hProlog.

Aug 31, 2005

  * TS: Added missing operator declarations for prefix (?).

Aug 9, 2005

  * JW: import lists into chr_compiler_utility.pl

  * JW: make message hook for query(yes) detect CHR global variables.

  * JW: Exported pairlist_delete_eq/3 from pairlist and use this in
    chr_hashtable_store.pl

Aug 4, 2005

  * TS: Renamed pairlist:delete/3 to pairlist:pairlist_delete/3.
	Mike Elston.
Aug 1, 2005

  * TS: Extended more efficient ground matching code to
	removed simpagation occurrence code.

Jul 28, 2005

  * TS: New input verification: duplicate constraint declaration
	now reported as an error. Requested by Mike Elston.
  * TS: More efficient matching code for ground constraints
	when matching an argument of a partner constraint with
	a ground term
  * JS: Bug fix in guard simplification.

Jul 3, 2005

  * TS: Factored out option functionality into separate module.
  * TS: Factored out utility code into separate module.

Jun 29, 2005

  * TS: Changed chr_show_store/1 to use print/1 instead of write/1.

Jun 28, 2005

  * TS: Removed spurious and conflicting operator definitions
	for +, - and ? as mode declarations.
